Code cleanup, implement table view of videos

--- a/BuffyTheVideoPlayer/BuffyTheVideoPlayer/Base.lproj/Main.storyboard
+++ b/BuffyTheVideoPlayer/BuffyTheVideoPlayer/Base.lproj/Main.storyboard
@@ -28,6 +28,43 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="AF5-hB-tla">
                                 <rect key="frame" x="10" y="230" width="580" height="360"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <tableView key="tableFooterView" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="fIy-KK-exd">
+                                    <rect key="frame" x="0.0" y="72" width="580" height="360"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                    <prototypes>
+                                        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="bvpcell" textLabel="mvv-yF-zwm" detailTextLabel="Nh2-Sg-lOq" style="IBUITableViewCellStyleSubtitle" id="hso-pJ-BTc">
+                                            <rect key="frame" x="0.0" y="28" width="580" height="44"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="hso-pJ-BTc" id="ZJw-OL-7My">
+                                                <rect key="frame" x="0.0" y="0.0" width="580" height="43"/>
+                                                <autoresizingMask key="autoresizingMask"/>
+                                                <subviews>
+                                                    <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="mvv-yF-zwm">
+                                                        <rect key="frame" x="15" y="5" width="32" height="20"/>
+                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Nh2-Sg-lOq">
+                                                        <rect key="frame" x="15" y="25" width="31" height="14"/>
+                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                            </tableViewCellContentView>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </tableViewCell>
+                                    </prototypes>
+                                    <connections>
+                                        <outlet property="dataSource" destination="BYZ-38-t0r" id="8kW-kw-uPj"/>
+                                        <outlet property="delegate" destination="BYZ-38-t0r" id="0Kt-8M-vCd"/>
+                                    </connections>
+                                </tableView>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="bvpcell" textLabel="0yb-fV-srr" detailTextLabel="YUk-qY-kIh" style="IBUITableViewCellStyleSubtitle" id="vWj-FV-QQK">
                                         <rect key="frame" x="0.0" y="28" width="580" height="44"/>
@@ -74,6 +111,7 @@
                     </view>
                     <connections>
                         <outlet property="playerView" destination="Ooe-Zc-huM" id="w3D-OU-DtG"/>
+                        <outlet property="videoList" destination="AF5-hB-tla" id="TuM-lS-NGm"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
