--- a/BuffyTheVideoPlayer/BuffyTheVideoPlayer/Base.lproj/Main.storyboard
+++ b/BuffyTheVideoPlayer/BuffyTheVideoPlayer/Base.lproj/Main.storyboard
@@ -37,17 +37,26 @@
                                     <outlet property="delegate" destination="1yC-h4-QIX" id="Wpj-mx-N2w"/>
                                 </connections>
                             </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="F3I-Jg-JZJ" customClass="BVPPlayerView" customModule="BuffyTheVideoPlayer" customModuleProvider="target">
+                                <rect key="frame" x="30" y="30" width="540" height="190"/>
+                                <color key="backgroundColor" red="1" green="0.80516025777117406" blue="0.66058550549996209" alpha="1" colorSpace="calibratedRGB"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailingMargin" secondItem="Ay8-j4-eV7" secondAttribute="trailing" constant="10" id="1W5-21-G6l"/>
+                            <constraint firstItem="Ay8-j4-eV7" firstAttribute="top" secondItem="F3I-Jg-JZJ" secondAttribute="bottom" constant="10" id="6kI-c9-mra"/>
                             <constraint firstItem="Ay8-j4-eV7" firstAttribute="leading" secondItem="CHA-gD-rFI" secondAttribute="leadingMargin" constant="10" id="Jmf-em-d6R"/>
                             <constraint firstItem="hvN-Oh-lnd" firstAttribute="top" secondItem="Ay8-j4-eV7" secondAttribute="bottom" constant="10" id="MdQ-NP-VHu"/>
                             <constraint firstItem="Ay8-j4-eV7" firstAttribute="centerX" secondItem="CHA-gD-rFI" secondAttribute="centerX" id="bOd-aC-NKu"/>
+                            <constraint firstItem="F3I-Jg-JZJ" firstAttribute="width" secondItem="Ay8-j4-eV7" secondAttribute="width" id="bSD-eh-cI1"/>
+                            <constraint firstItem="F3I-Jg-JZJ" firstAttribute="top" secondItem="Maw-rr-BN8" secondAttribute="bottom" constant="10" id="h1y-rs-7rV"/>
                             <constraint firstItem="Ay8-j4-eV7" firstAttribute="height" secondItem="CHA-gD-rFI" secondAttribute="height" multiplier="0.6" id="kEE-CK-JRJ"/>
+                            <constraint firstItem="F3I-Jg-JZJ" firstAttribute="centerX" secondItem="CHA-gD-rFI" secondAttribute="centerX" id="qUh-5M-t9z"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="playerView" destination="F3I-Jg-JZJ" id="OYl-Wm-tqG"/>
                         <outlet property="videoList" destination="Ay8-j4-eV7" id="icd-6J-52k"/>
                     </connections>
                 </viewController>
